tests/rosetta/transpiler/C/associative-array-creation.c
// Generated by Mochi 0.10.32 on 2025-07-27 11:07 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>


static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static void map_set_si(const char *keys[], int vals[], size_t *len, const char *key, int val) {
    for (size_t i = 0; i < *len; i++) {
        if (strcmp(keys[i], key) == 0) { vals[i] = val; return; }
    }
    keys[*len] = key; vals[*len] = val; (*len)++;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;

struct Anon1 {
};

struct Anon2 {
    int foo;
    int bar;
    int baz;
};

int removeKey(int m, const char* k);
int user_main();
int main(void);

int removeKey(int m, const char* k) {
    const char* out_keys[16] = {};
    int out_vals[16] = {};
    size_t out_len = 0;
    for (size_t __i = 0; __i < m_keys_len; __i++) {
        const char* key = m_keys[__i];
        if (strcmp(key, k) != 0) {
            map_set_si(out_keys, out_vals, &out_len, key, map_get_si(m_keys, m_vals, m_len, key));
        }
    }
    return out;
}

int user_main() {
    int x = 0;
    x = (Anon1){};
    x["foo"] = 3;
    int y1 = x["bar"];
    int ok = "bar" in x;
    printf("%d\n", y1);
    printf("%d\n", ok);
    x = removeKey(x, "foo");
    x = (Anon2){.foo = 2, .bar = 42, .baz = -1};
    printf("%d %d %d\n", 2, 42, -1);
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        user_main();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
